# voice-assistant

./: agent.py  calendar_service.py  config.py  llm_processor.py  main.py  pyproject.toml  readme.md  vector_search.py  voice_processor.py  web_searcher.py
